k8s/api/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  api
  labels:
    api-deployment:  api
spec:
  replicas: 1
  selector:
    matchLabels:
      api-pod: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        api-pod:  api
    spec:
      restartPolicy: Always
      containers:
      - image:  jeanflores2c93/pets_app
        name:  api
        ports:
        - containerPort:  8080
        resources:
          limits:
            memory: "134217728"
